AMPS-321 run fisheye in a separate process from maven
git-svn-id: https://studio.atlassian.com/svn/AMPS/trunk@64140 2c54a935-e501-0410-bc05-97a93f6bca70